--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Written Dhirendra for all your Interview needs">
+    <meta name="author" content="Dhirendra">
 
-    <title>Welcome to My Battle Field</title>
-
+    <title>Answers by Dhirendra : Official Website for your Interview Preparation</title>
+	
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -20,6 +20,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
+	
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
   </head>
 
@@ -38,9 +40,6 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
-			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="resume">Resume</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
@@ -56,9 +55,11 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Dhirendra</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <h1 class="mx-auto my-0 text-uppercase">Learn with Me</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">On stop soltuion for all your interview needs</h2>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">Java Interview</a>
+		  <a href="#about" class="btn btn-primary js-scroll-trigger">Big Data Interview</a>
+		  <a href="#about" class="btn btn-primary js-scroll-trigger">Spring Interview</a>
         </div>
       </div>
     </header>
@@ -164,7 +165,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">Luxotica Today , Mayfield Garden, Sector 51, Gurugram, Haryana 122018</div>
               </div>
             </div>
           </div>
@@ -176,7 +177,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">contact@dhirendrakumar.co.in</a>
                 </div>
               </div>
             </div>
@@ -188,7 +189,7 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <div class="small text-black-50">+91 70042882784</div>
               </div>
             </div>
           </div>
@@ -212,7 +213,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Copyright &copy; dhirendrakumar.co.in 2018
       </div>
     </footer>
 
