image size compressed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Written Dhirendra for all your Interview needs">
+    <meta name="description" content="Please visit this Website for all your Interview needs both technical and behavioural!!">
     <meta name="author" content="Dhirendra">
 
     <title>Answers by Dhirendra : Official Website for your Interview Preparation</title>
