tittle length change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Please visit this Website for all your Interview needs both technical and behavioural!!">
     <meta name="author" content="Dhirendra">
 
-    <title>Answers by Dhirendra : Official Website for your Interview Preparation</title>
+    <title>Answers by Dhirendra: Official Website for Interview Preparation</title>
 	
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
