New Website Added

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="utf-8">
 <meta name="description" content="My Profile" />
@@ -60,7 +61,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav mr-auto w-100 justify-content-end">
-<li class="nav-item active">
+<li class="nav-item">
 <a class="nav-link" data-type="page-transition" href="index.html">Home</a>
 </li>
 <li class="nav-item">
@@ -69,7 +70,8 @@
 <li class="nav-item">
 <a class="nav-link" data-type="page-transition" href="resume.html">resume</a>
 </li>
-<!--<li class="nav-item">
+<!--
+<li class="nav-item">
 <a class="nav-link" data-type="page-transition" href="services.html">services</a>
 </li>
 <li class="nav-item">
@@ -79,7 +81,7 @@
 <a class="nav-link" data-type="page-transition" href="blog.html">blog</a>
 </li>
 -->
-<li class="nav-item">
+<li class="nav-item active">
 <a class="nav-link" data-type="page-transition" href="contact-us.html">contact</a>
 </li>
 </ul>
@@ -93,7 +95,7 @@
 
 <div class="main-container">
 
-<section class="me-home wrapper">
+<section class="iq-contact wrapper">
 <div class="container-fluid h-100">
 <div class="row row-eq-height h-100">
 <div class="col-md-3 purple-bg">
@@ -106,22 +108,29 @@
 </div>
 </div>
 <div class="col-md-9 main-content align-self-center">
-<div id="boxscroll" class="iq-home">
-<div class="home-deta iq-mt-90">
+<div id="boxscroll" class="inner-box">
+<div class="iq-plr-40">
 <div class="row">
+<div class="col-md-12">
+<div class="main-title iq-mb-15">
+<small>My Contact</small>
+<h1 class="display-4 iq-tw-8 iq-font-purple">Contact Me</h1>
+</div>
+</div>
 <div class="col-md-4">
-<div class="boder-img">
-<img src="images/profile1.jpg" class="img-fluid" alt="#">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14035.21060622054!2d77.0530776714202!3d28.425211119998238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1881db145f31%3A0x6d8ce8a77a2b218e!2sMayfield+Garden%2C+Sector+51%2C+Gurugram%2C+Haryana!5e0!3m2!1sen!2sin!4v1547828007925" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+<div class="col-md-8">
+<div class="row">
+<div class="col-md-12">
+<h3 class="title iq-tw-8 text-uppercase iq-mt-0">Get in Touch</h3>
+<ul class="contact-info">
+<li><i class="ti-location-pin"></i> <p>Mayfield Garden , Sector 51 Gurugram</p> </li>
+<li><i class="ti-marker-alt"></i> <p>contact@dhirendrakumar.co.in </p></li>
+<li><i class="ti-mobile"></i> <p>(+91)-7042882784 </p></li>
+</ul>
 </div>
 </div>
-<div class="col-md-8 content-deta">
-<h2 class="iq-tw-8 ">Hello,<br>I Am Dhirendra</h2>
-<h2 class="iq-tw-8 ">A Senior Software Engineer</h2>
-<p class="lead iq-tw-4">
-I am having an overall 5.5 years of work experience in analysis, design and development of enterprise application as Senior Software engineer in an agile environment.
-Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledge & Experience in complete software development life cycle including coding standards, code reviews, source control management, build processes,testing and operations.
-<a class="button iq-mt-30" href="about-us.html">Know More About Me</a>
-<a class="button iq-mt-30" href="Dhirendra_Resume.docx" target="_blank">Download my CV</a>
+
 </div>
 </div>
 </div>
@@ -137,7 +146,7 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 <footer>
 <div class="container-fluid">
 <div class="row">
-<
+
 <div class="col-md-9">
 <ul class="follow-us pull-right">
 <li>Follow Me :</li>
@@ -150,6 +159,7 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 </div>
 </div>
 </footer>
+
 
 <script type="text/javascript" src="js/jquery-min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
@@ -176,4 +186,5 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 
 <script type="text/javascript" src="js/custom.js"></script>
 </body>
+
 </html>
