--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="utf-8">
-<meta name="description" content="My Profile" />
+<meta name="description" content="Profyl - Personal Vcard Resume HTML Template" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>My Profile</title>
 
@@ -60,10 +61,10 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav mr-auto w-100 justify-content-end">
-<li class="nav-item active">
+<li class="nav-item">
 <a class="nav-link" data-type="page-transition" href="index.html">Home</a>
 </li>
-<li class="nav-item">
+<li class="nav-item active">
 <a class="nav-link" data-type="page-transition" href="about-us.html">About me</a>
 </li>
 <li class="nav-item">
@@ -93,7 +94,7 @@
 
 <div class="main-container">
 
-<section class="me-home wrapper">
+<section class="me-about wrapper">
 <div class="container-fluid h-100">
 <div class="row row-eq-height h-100">
 <div class="col-md-3 purple-bg">
@@ -106,23 +107,34 @@
 </div>
 </div>
 <div class="col-md-9 main-content align-self-center">
-<div id="boxscroll" class="iq-home">
-<div class="home-deta iq-mt-90">
+<div id="boxscroll" class="iq-home about-us">
+<div class="home-deta iq-mt-80">
 <div class="row">
 <div class="col-md-4">
 <div class="boder-img">
-<img src="images/profile1.jpg" class="img-fluid" alt="#">
+<img src="images/profile2.jpg" class="img-fluid" alt="#">
 </div>
 </div>
 <div class="col-md-8 content-deta">
-<h2 class="iq-tw-8 ">Hello,<br>I Am Dhirendra</h2>
-<h2 class="iq-tw-8 ">A Senior Software Engineer</h2>
-<p class="lead iq-tw-4">
-I am having an overall 5.5 years of work experience in analysis, design and development of enterprise application as Senior Software engineer in an agile environment.
-Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledge & Experience in complete software development life cycle including coding standards, code reviews, source control management, build processes,testing and operations.
-<a class="button iq-mt-30" href="about-us.html">Know More About Me</a>
-<a class="button iq-mt-30" href="Dhirendra_Resume.docx" target="_blank">Download my CV</a>
+<div class="main-title">
+<small>Know About Me</small>
+<h1 class="display-4 iq-tw-8 iq-font-purple">About Me</h1>
 </div>
+<p class="iq-tw-4 iq-mt-10 iq-mb-20">Hello! I’m Dhirendra. I am looking for the new opportunities and challenge in order to grow myself both as an individual and a good software engineer.I want to contibute in the growth of the organization by harnessing the power of technology and innovation.</p>
+<ul class="contact-info">
+<li> <span class="iq-tw-6">Name :</span> Dhirendra Kumar Suman</li>
+<li> <span class="iq-tw-6">Current Company :</span> Globallogic </li>
+<li> <span class="iq-tw-6">Current Role :</span> Java Developer </li>
+<li> <span class="iq-tw-6">Email :</span><a> contact@dhirendrakumar.co.in </span></a></li>
+<li> <span class="iq-tw-6">Phone :</span> (+91)-7042882784</li>
+<li> <span class="iq-tw-6">Address :</span> Gurugram , Harayana</li>
+<li> <span class="iq-tw-6">Nationality :</span>Indian</li>
+<li><span class="iq-tw-6">Gender :</span> Male</li>
+<li><span class="iq-tw-6">Designation :</span> Senior Software Developer</li>
+</ul>
+<a class="button" href="resume.html">resume</a>
+<a class="button iq-ml-20" href="contact-us.html">contact me</a>
+ </div>
 </div>
 </div>
 </div>
@@ -137,7 +149,6 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 <footer>
 <div class="container-fluid">
 <div class="row">
-<
 <div class="col-md-9">
 <ul class="follow-us pull-right">
 <li>Follow Me :</li>
@@ -150,6 +161,9 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 </div>
 </div>
 </footer>
+
+
+
 
 <script type="text/javascript" src="js/jquery-min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
@@ -169,7 +183,7 @@ Along with it, I am also a Scrum Master for more than 2.5 years. I have Knowledg
 
 <script type="text/javascript" src="js/retina.min.js"></script>
 
-<script type="text/javascript" src="js/particles/particles.min.js"></script>
+ <script type="text/javascript" src="js/particles/particles.min.js"></script>
 <script type="text/javascript" src="js/particles/app.js"></script>
 
 <script type="text/javascript" src="js/style-customizer.js"></script>
