--- a/blog-single.html
+++ b/blog-single.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 <meta charset="utf-8">
+<<meta charset="utf-8">
 <meta name="description" content="My Profile" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>My Profile</title>
@@ -53,7 +53,7 @@
 <div class="row">
 <nav class="navbar fixed-top navbar-expand-lg navbar-light white-bg">
 <div class="col-md-3 purple-bg">
-<a class="navbar-brand" href="index.html"></a>
+<a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
 </div>
 <div class="col-md-9">
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,15 +109,15 @@
 <div id="boxscroll" class="inner-box">
 <div class="iq-plr-40">
 <div class="row">
-<div class="col-sm-12">
+<div class="col-md-12">
 <div class="main-title iq-mb-20">
-<small>My Latest Blog</small>
-<h1 class="display-4 iq-tw-8 iq-font-purple">My Blog</h1>
+<small>MY LATEST BLOG</small>
+<h1 class="display-4 iq-tw-8 iq-font-purple">Blog Single</h1>
 </div>
 </div>
 </div>
 <div class="row">
-<div class="col-md-6 col-lg-4">
+<div class="col-md-12">
 <div class="iq-blog-box">
 <div class="iq-blog-image clearfix">
 <img class="img-fluid" src="images/blog/01.jpg" alt="#">
@@ -131,121 +131,76 @@
 </ul>
 </div>
 <div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
-</div>
+<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
  </div>
-</div>
-<div class="col-md-6 col-lg-4">
-<div class="iq-blog-box re-mt30">
-<div class="iq-blog-image clearfix">
-<img class="img-fluid" src="images/blog/02.jpg" alt="#">
-</div>
-<div class="iq-blog-detail">
-<div class="blog-title"> <a href="blog-single.html"><h5 class="iq-tw-6">Blogpost With Image</h5> </a> </div>
-<div class="iq-blog-meta">
-<ul class="list-inline">
-<li class="list-inline-item"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 12 Aug 2017</a></li>
-<li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 5</a></li>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<pre class="iq-pall-20 alert alert-dark iq-mtb-30">&lt;p&gt;Text here...&lt;/p&gt;</pre>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+<ul class="iq-tags list-inline iq-mtb-50">
+<li><a href="#">Bootstrap</a></li>
+<li><a href="#">HTML5</a></li>
+<li><a href="#">Wordpress</a></li>
 </ul>
-</div>
-<div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
+<div class="media purple-bg iq-font-white iq-pall-30">
+<img alt="#" class="img-fluid mr-3" src="images/testimonial/01.jpg">
+<div class="media-body">
+<h5 class="mt-0 iq-font-white">Rinku Kevin</h5> Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 </div>
 </div>
+<div id="comments" class="iq-mt-30">
+<h3 class="heading-left iq-tw-6 ">Comments <small>/ 21</small></h3>
+<ol class="list-inline iq-comment-list">
+<li class="iq-mt-0">
+<div class="media">
+<img alt="#" class="img-fluid mr-3" src="images/testimonial/01.jpg">
+<div class="media-body">
+<h5>Rinku Kevin</h5>
+<div class="iq-comment-metadata"><a href="#"><i class="fa fa-calendar"></i>
+<span>July 18, 2014 at 1:26 pm</span>
+</a></div><a href="#" class="reply button">Reply</a>
+<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 </div>
-<div class="col-md-6 col-lg-4">
-<div class="iq-blog-box re9-mt30">
-<div class="iq-blog-image clearfix">
-<img class="img-fluid" src="images/blog/03.jpg" alt="#">
 </div>
-<div class="iq-blog-detail">
-<div class="blog-title"> <a href="blog-single.html"><h5 class="iq-tw-6">Blogpost With Image</h5> </a> </div>
-<div class="iq-blog-meta">
 <ul class="list-inline">
-<li class="list-inline-item"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 12 Aug 2017</a></li>
-<li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 5</a></li>
+<li>
+<div class="media">
+<img alt="#" class="img-fluid mr-3" src="images/testimonial/02.jpg">
+<div class="media-body">
+<h5>Rinku king</h5>
+<div class="iq-comment-metadata"><a href="#"><i class="fa fa-calendar"></i>
+<span>July 18, 2014 at 1:26 pm</span>
+</a></div><a href="#" class="reply button">Reply</a>
+<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+</div>
+</div>
+</li>
 </ul>
-</div>
-<div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
-</div>
-</div>
-</div>
-<div class="col-md-6 col-lg-4 iq-mt-30">
-<div class="iq-blog-box">
-<div class="iq-blog-image clearfix">
-<img class="img-fluid" src="images/blog/05.jpg" alt="#">
-</div>
-<div class="iq-blog-detail">
-<div class="blog-title"> <a href="blog-single.html"><h5 class="iq-tw-6">Blogpost With Image</h5> </a> </div>
-<div class="iq-blog-meta">
-<ul class="list-inline">
-<li class="list-inline-item"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 12 Aug 2017</a></li>
-<li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 5</a></li>
-</ul>
-</div>
-<div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
+</li>
+<li>
+<div class="media">
+<img alt="#" class="img-fluid mr-3" src="images/testimonial/03.jpg">
+<div class="media-body">
+<h5>JD</h5>
+<div class="iq-comment-metadata"><a href="#"><i class="fa fa-calendar"></i>
+<span>July 18, 2014 at 1:26 pm</span>
+</a></div><a href="#" class="reply button">Reply</a>
+<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 </div>
 </div>
-</div>
-<div class="col-md-6 col-lg-4 iq-mt-30">
-<div class="iq-blog-box">
-<div class="iq-blog-image clearfix">
-<img class="img-fluid" src="images/blog/06.jpg" alt="#">
-</div>
-<div class="iq-blog-detail">
-<div class="blog-title"> <a href="blog-single.html"><h5 class="iq-tw-6">Blogpost With Image</h5> </a> </div>
-<div class="iq-blog-meta">
-<ul class="list-inline">
-<li class="list-inline-item"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 12 Aug 2017</a></li>
-<li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 5</a></li>
-</ul>
-</div>
-<div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
+</li>
+<li>
+<div class="media">
+<img alt="#" class="img-fluid mr-3" src="images/testimonial/01.jpg">
+<div class="media-body">
+<h5>Nik Kevin</h5>
+<div class="iq-comment-metadata"><a href="#"><i class="fa fa-calendar"></i>
+<span>July 18, 2014 at 1:26 pm</span>
+</a></div><a href="#" class="reply button">Reply</a>
+<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 </div>
 </div>
-</div>
-<div class="col-md-6 col-lg-4 iq-mt-30">
-<div class="iq-blog-box"> 
-<div class="iq-blog-image clearfix">
-<img class="img-fluid" src="images/blog/07.jpg" alt="#">
-</div>
-<div class="iq-blog-detail">
-<div class="blog-title"> <a href="blog-single.html"><h5 class="iq-tw-6">Blogpost With Image</h5> </a> </div>
-<div class="iq-blog-meta">
-<ul class="list-inline">
-<li class="list-inline-item"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 12 Aug 2017</a></li>
-<li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 5</a></li>
-</ul>
-</div>
-<div class="blog-content">
-<p>Quae laboriosam sunt consectetur, assumenda provident lorem ipsum dolor sit amet, consectetur adipisicing elit. hic perspiciatis.</p>
-</div>
-<div class="blog-button">
-<a href="#" class="pull-left iq-tw-6 iq-user"><i class="fa fa-user-circle" aria-hidden="true"></i> Jenny Jones</a>
-<a href="#" class="pull-right iq-tw-6">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a> </div>
+</li>
+</ol>
 </div>
 </div>
 </div>
@@ -253,6 +208,7 @@
 </div>
 </div>
 </div>
+</div> 
 </div>
 </div>
 </section>
@@ -293,7 +249,7 @@
 <li class="color-3" data-style="color-3"></li>
 <li class="color-4" data-style="color-4"></li>
 <li class="color-5" data-style="color-5"></li>
- <li class="color-6" data-style="color-6"></li>
+<li class="color-6" data-style="color-6"></li>
 <li class="color-7" data-style="color-7"></li>
 <li class="color-8" data-style="color-8"></li>
 <li class="color-9" data-style="color-9"></li>
@@ -333,5 +289,5 @@
 <script type="text/javascript" src="js/custom.js"></script>
 </body>
 
-<!-- Mirrored from iqonicthemes.com/themes/profyl/canvas/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 18 Jan 2019 15:14:01 GMT -->
+<!-- Mirrored from iqonicthemes.com/themes/profyl/canvas/blog-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 18 Jan 2019 15:14:03 GMT -->
 </html>
