--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="description" content="My Profile" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>My Profile</title>
+<title>Dhirendra</title>
 
 <link rel="shortcut icon" href="images/favicon.png" />
 
@@ -208,8 +208,16 @@
 </div>
 </div>
 <div class="iq-progress-bar-linear iq-font-black iq-mb-0">
-<p class="iq-progress-bar-text">Micro Services
+<p class="iq-progress-bar-text">Microservices
 <span>50/100</span>
+</p>
+<div class="iq-progress-bar">
+<span data-percent="50"></span>
+</div>
+</div>
+<div class="iq-progress-bar-linear iq-font-black iq-mb-0">
+<p class="iq-progress-bar-text">Design Patterns
+<span>60/100</span>
 </p>
 <div class="iq-progress-bar">
 <span data-percent="50"></span>
