--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="description" content="My Profile" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>My Profile</title>
+<title>Dhirendra</title>
 
 <link rel="shortcut icon" href="images/favicon.png" />
 
